--- a/transito/templates/transito/partials/head.html
+++ b/transito/templates/transito/partials/head.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'transito/css/sinalizacoes.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/vagas_especiais.css' %}">
     <link rel="stylesheet" href="{% static 'transito/css/cartao_idoso.css' %}">
-    <link rel="stylesheet" href="{% static 'transito/css/cartaodef.css' %}">
+    <link rel="stylesheet" href="{% static 'transito/css/cartao_def.css' %}">
     <title>Trânsito Leme</title>
 </head>
 
