--- a/transito/static/transito/css/cartao_idoso.css
+++ b/transito/static/transito/css/cartao_idoso.css
@@ -289,7 +289,7 @@ input {
     margin-top: 1.2rem;
 }
 
-/*.section-rep {
+.section-rep {
     display: flex;
     gap: 60px;
     justify-content: center;
