--- a/transito/templates/transito/pages/cartao_def.html
+++ b/transito/templates/transito/pages/cartao_def.html
@@ -152,12 +152,11 @@
             <hr>
             <br>
             <br>
-
+            <h2 class="txt-rep">Informações do Representante:</h2>
             <!--REPRESENTANTE-->
-            
                 <div class="form-rep" id="parte" style="display: none;">
                     <div class="container-representante">
-                        <div class="section-rep">
+                        <div class="section-rep-def">
                             <h2 class="subt-info">Dados do Representante</h2>
                             <div class="container-item">
                                 <label for="">Nome completo:</label>
