add link cartao def vagas

--- a/transito/templates/transito/pages/vagas_especiais.html
+++ b/transito/templates/transito/pages/vagas_especiais.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>Cartão pessoas com Deficiência</h1>
     <p class="cont-text"> O Cartão de Estacionamento para Pessoas com Deficiência é uma medida essencial que proporciona benefícios a indivíduos com mobilidade reduzida. Emitido por órgãos de trânsito, permite o estacionamento em vagas reservadas, próximas a locais de acesso público. Além da comodidade, promove a inclusão social, facilita a locomoção e a participação em atividades cotidianas. Essa iniciativa valoriza a autonomia das pessoas com deficiência, garantindo-lhes maior independência e acesso a serviços essenciais. É fundamental que as vagas sejam adequadamente sinalizadas e fiscalizadas para assegurar o cumprimento correto do benefício. Respeitar e apoiar essa medida é reconhecer os direitos e contribuições das pessoas com deficiência na sociedade.</p>
-    <button class="btn-card"><a class="link-card" href=" ">Clique aqui para solicitar</a></button>
+    <button class="btn-card"><a class="link-card" href="{% url 'cartao_def' %} ">Clique aqui para solicitar</a></button>
 </div>
 
 <br>
