add links multas

--- a/transito/templates/transito/pages/multas.html
+++ b/transito/templates/transito/pages/multas.html
@@ -17,7 +17,7 @@
 
     <p class="cont-txt-cond"><strong>Link para Indicação de condutor:</strong></p>
     <div class="cont-link">
-        <a class="link-condutor" href="">Clique aqui.</a>
+        <a class="link-condutor" href="http://leme.sipladu.com.br/">Clique aqui.</a>
     </div>
 
 </div>
@@ -39,7 +39,7 @@
 
     <p class="cont-txt-cond"><strong> Link para Recurso:</strong></p>
     <div class="cont-link">
-        <a class="link-condutor" href="">Clique aqui.</a>
+        <a class="link-condutor" href="http://leme.sipladu.com.br/">Clique aqui.</a>
     </div>
 </div>
 
