excluido file contato

--- a/transito/templates/transito/pages/zona_azul.html
+++ b/transito/templates/transito/pages/zona_azul.html
@@ -31,7 +31,7 @@
     </p>
 
     <p class="titulo-zona-contato">Site Zona Azul:</p>
-    <a href="" class="link-site">www.zonaazulbrasil.com.br/leme</a>
+    <a href="https://zonaazulbrasil.com.br/leme/" class="link-site">www.zonaazulbrasil.com.br/leme</a>
     <ul class="lista-contato">
         <li class="contato">Email:contato@zonaazul.com.br</li>
         <li class="contato">Telefone:(19) 3555-3155</li>
