--- a/transito/templates/transito/pages/contato.html
+++ b/transito/templates/transito/pages/contato.html
@@ -27,4 +27,10 @@
                 <button class="btn-res" type="reset">LIMPAR</button>
             </div>
     </section>
+
+    <br>
+    <br>
+    <br>
+
+    {% include 'transito\partials\footer.html' %}
 </body>
